# DVS-

./: README.md
app/: __init__.py  export.py  frontend_export.py  frontend_export_batch.py  frontend_export_tk.py  main.py  pyproject.toml  report.md  simple_export.py
app/core/: pipeline.py  visualization.py
app/filters/: baf.py  base.py  event_corners.py  event_count.py  event_deblurring.py  event_optical_flow.py  hdr_visualisation.py  neighborhood.py  refractory.py  registry.py  time_surface.py  visual_registry.py
app/io/: metavision_reader.py
app/tests/: test_filters.py  test_metavision_reader.py  test_visual_filters.py
app/ui/: __init__.py  filter_panel.py  main_window.py
cpp/: CMakeLists.txt  README.md
cpp/include/dvs/: baf_filter.hpp  event.hpp  filter.hpp  overlay.hpp  pipeline.hpp  refractory_filter.hpp  time_surface_filter.hpp
cpp/src/: baf_filter.cpp  main.cpp  pipeline.cpp  refractory_filter.cpp  time_surface_filter.cpp
cpp/tests/: test_filters.cpp
