[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dvs_viewer"
version = "0.1.0"
description = "Desktop app for viewing Prophesee DVS recordings and live cameras with filters"
authors = [
    { name = "Trautner ", email = "unknown@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21,<1.26",
    "PySide6>=6.4",
    "ffmpeg-python>=0.2",
    "numba>=0.56",
    # The Metavision SDK must be installed manually from Prophesee; it is not available on PyPI
]

[project.optional-dependencies]
dev = [
    "pytest>=6",
    "ruff",
    "black"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88